# opengl-lightning

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
